--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html {
+	height: 100% !important;
+}
+
 body {
 	background:#fff;
 	font: normal 18px "Open Sans", arial, sans-serif;
@@ -6,10 +10,6 @@ body {
 	color: #545454;
 	height: 100% !important;
 	line-height: 30px;
-}
-
-html {
-	height: 100% !important;
 }
 
 body a {
@@ -25,6 +25,14 @@ body a:hover {
 	transition: all 1s ease;
 }
 
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+body {
+  position: relative;
+}
+
 .wrapper {
 	-webkit-transition: all .1s ease;
 	-moz-transition: all .1s ease;
@@ -37,7 +45,13 @@ body a:hover {
 }
 
 .splash {
-	padding-top: 20vh;
+	padding-top: 15vh;
+}
+
+@media (min-width: 1200px) {
+	.splash {
+		padding-top: 20vh;
+	}
 }
 
 .flip-card {
@@ -57,7 +71,6 @@ body a:hover {
 	min-height: 133px;
 }
 
-/* This container is needed to position the front and back side */
 .flip-card-inner {
  	position: relative;
  	width: 100%;
@@ -67,17 +80,15 @@ body a:hover {
  	transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
  	transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
 .flip-card-front, .flip-card-back {
  	position: absolute;
  	width: 100%;
  	height: 100%;
- 	-webkit-backface-visibility: hidden; /* Safari */
+ 	-webkit-backface-visibility: hidden;
  	backface-visibility: hidden;
 }
 
@@ -96,7 +107,6 @@ body a:hover {
 }
 
 .splash_init {
-	padding: 25px 25% 50px 25%;
 	font-size: 80%;
 }
 
